--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,14 @@ img {
   width: 100%;
 }
 
+img:nth-child(odd) {
+  display: inline-block;
+}
+
+img:nth-child(even) {
+  display: none;
+}
+
 @media only screen and (min-width: 25em) {
 
   body {
